[package]
name = "gostd"
license = "MIT"
version = "0.0.9"
edition = "2018"
authors = ["wandercn<wander@ffactory.org>"]
description = "gostd is the go standard library implementation in rust. gostd 是Go标准库的rust实现"
homepage = "https://github.com/wandercn/gostd"
repository = "https://github.com/wandercn/gostd"
keywords = ["gobind","go-api","gostd","go-to-rust","go-standard-library"]
categories= ["api-bindings","accessibility","development-tools","compilers"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
[dependencies]
gostd_derive = "0.0.1"
libc = "0.2"
cvt = "0.1.1"
lazy_static = "1.4.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
