[package]
name = "gostd_bytes"
license = "MIT"
version = "1.1.3"
edition = "2018"
authors = ["wandercn<wander@rustpub.com>"]
description = "gostd_bytes is a part of gostd, gostd_bytes 是go标准库bytes的rust实现"
homepage = "https://github.com/wandercn/gostd"
repository = "https://github.com/wandercn/gostd"
keywords = ["gostd_bytes", "bytes", "gostd", "go-to-rust", "go-standard-library"]
categories = ["api-bindings", "accessibility", "development-tools", "compilers"]

[profile.dev]
opt-level = 0

[profile.release]

opt-level = 3

[dependencies]
gostd_builtin = "^1.0"
gostd_io = "^1.0"
gostd_time ="^1.0"
gostd_unicode = "^1.0"
gostd_derive = "0.0.3"
gostd_strings = "^1.0"