[package]
name = "gostd"
license = "MIT"
version = "0.4.1"
edition = "2018"
authors = ["wandercn<wander@rustpub.com>"]
description = "gostd is the go standard library implementation in rust. gostd 是Go标准库的rust实现"
homepage = "https://github.com/wandercn/gostd"
repository = "https://github.com/wandercn/gostd"
keywords = ["gobind", "go-api", "gostd", "go-to-rust", "go-standard-library"]
categories = ["api-bindings", "accessibility", "development-tools", "compilers"]

[profile.dev]
opt-level = 0

[profile.release]

opt-level = 3
[dependencies]

gostd_builtin = { version = "^1.0", optional = false, path = "../builtin" }
gostd_strings = { version = "^1.0", optional = false, path = "../strings" }
gostd_io = { version = "^1.0", optional = false, path = "../io" }
gostd_time = { version = "^1.0", optional = false, path = "../time" }
gostd_unicode = { version = "^1.0", optional = false, path = "../unicode" }
gostd_url= { version = "^1.0", optional = false, path = "../url" }
gostd_bytes= { version = "^1.0", optional = false, path = "../bytes" }
gostd_derive = "0.0.3"
gostd_http = { version = "^1.0", optional = false, path = "../http" }
rand = "0.8.5"

