[package]
name = "gostd"
license = "MIT"
version = "0.4.3"
edition = "2018"
authors = ["wandercn<wander@rustpub.com>"]
description = "gostd is the go standard library implementation in rust. gostd 是Go标准库的rust实现"
homepage = "https://github.com/wandercn/gostd"
repository = "https://github.com/wandercn/gostd"
keywords = ["gobind", "go-api", "gostd", "go-to-rust", "go-standard-library"]
categories = ["api-bindings", "accessibility", "development-tools", "compilers"]

[profile.dev]
opt-level = 0

[profile.release]

opt-level = 3
[features]
default = []  
tokio-rt = ["gostd_http/tokio-runtime"]  # 启用 Tokio 特性
async-std-rt = ["gostd_http/async-std-runtime"]  # 启用 Async-std 特性
[dependencies]

gostd_builtin = "^1.0"
gostd_strings = "^1.0"
gostd_io = "^1.0"
gostd_time ="^1.0"
gostd_unicode = "^1.0"
gostd_url= "^1.0"
gostd_bytes=  "1.0"
gostd_derive = "0.0.3"
gostd_http =  "1.1.3"
rand = "0.8.5"

