[package]
name = "gostd_http"
license = "MIT"
version = "1.1.1"
edition = "2018"
authors = ["wandercn<wander@rustpub.com>"]
description = "gostd_http is a part of gostd, gostd_http 是go标准库net/http的rust实现"
homepage = "https://github.com/wandercn/gostd"
repository = "https://github.com/wandercn/gostd"
keywords = ["gostd_http", "http", "gostd", "go-to-rust", "go-standard-library"]
categories = ["api-bindings", "accessibility", "development-tools", "compilers"]

[profile.dev]
opt-level = 0

[profile.release]

opt-level = 3
[dependencies]
gostd_builtin = { version = "^1.0", optional = false, path = "../builtin" }
gostd_strings = { version = "^1.0", optional = false, path = "../strings" }
gostd_io = { version = "^1.0", optional = false, path = "../io" }
gostd_time = { version = "^1.0", optional = false, path = "../time" }
gostd_url= { version = "^1.0", optional = false, path = "../url" }
webpki-roots = "^0.26"
rustls = "^0.23"
bytes = "1"
thiserror ="2.0"
anyhow= "1.0"
