[package]
name = "gostd_http"
license = "MIT"
version = "1.1.5"
edition = "2018"
authors = ["wandercn<wander@rustpub.com>"]
description = "gostd_http is a part of gostd, gostd_http 是go标准库net/http的rust实现"
homepage = "https://github.com/wandercn/gostd"
repository = "https://github.com/wandercn/gostd"
keywords = ["gostd_http", "http", "gostd", "go-to-rust", "go-standard-library"]
categories = ["api-bindings", "accessibility", "development-tools", "compilers"]

[profile.dev]
opt-level = 0

[profile.release]

opt-level = 3
[features]

default = []
async-http=[]
tokio-runtime = ["tokio", "tokio-rustls","async-http"]
async-std-runtime = ["async-std", "async-tls","async-http"]

[dependencies]
gostd_builtin="^1.0"
gostd_strings =  "^1.0"
gostd_io ="^1.0"
gostd_time ="^1.0"
gostd_url=  "^1.0"
webpki-roots = "1.0.0"
rustls = "^0.23"
bytes = "1"
thiserror ="2.0"
anyhow= "1.0"
tokio = { version = "1.45.0", features = ["full"] , optional = true }
tokio-rustls = {version= "0.26",optional = true}
async-std = { version = "1.13", optional = true }
async-tls = { version = "0.13", optional = true }
