[package]
name = "gostd_io"
license = "MIT"
version = "1.1.1"
edition = "2018"
authors = ["wandercn<wander@rustpub.com>"]
description = "gostd_io is a part of gostd,gostd 是Go标准库的rust实现"
homepage = "https://github.com/wandercn/gostd"
repository = "https://github.com/wandercn/gostd"
keywords = ["gostd_io", "go-api", "gostd", "go-to-rust", "go-standard-library"]
categories = ["api-bindings", "accessibility", "development-tools", "compilers"]

[profile.dev]
opt-level = 0

[profile.release]

opt-level = 3
[dependencies]
gostd_builtin = { version = "^1.0", optional = false, path = "../builtin" }
