[package]
name = "gostd_strings"
license = "MIT"
version = "1.1.1"
edition = "2018"
authors = ["wandercn<wander@rustpub.com>"]
description = "gostd_strings is a part of gostd, gostd_strings 是go标准库strings的rust实现"
homepage = "https://github.com/wandercn/gostd"
repository = "https://github.com/wandercn/gostd"
keywords = ["gostd_strings", "strings", "gostd", "go-to-rust", "go-standard-library"]
categories = ["api-bindings", "accessibility", "development-tools", "compilers"]

[dependencies]
gostd_io = { version = "^1.0", optional = false, path = "../io" }
gostd_builtin = { version = "^1.0", optional = false, path = "../builtin" }
gostd_unicode = { version = "^1.0", optional = false, path = "../unicode" }
gostd_derive = "0.0.3"