[package]
name = "gostd_unicode"
license = "MIT"
version = "1.1.1"
edition = "2018"
authors = ["wandercn<wander@rustpub.com>"]
description = "gostd_unicode is a part of gostd,gostd 是Go标准库的rust实现"
homepage = "https://github.com/wandercn/gostd"
repository = "https://github.com/wandercn/gostd"
keywords = ["gostd_unicode", "go-api", "gostd", "go-to-rust", "go-standard-library"]
categories = ["api-bindings", "accessibility", "development-tools", "compilers"]

[dependencies]
gostd_builtin = { version = "^1.0", optional = false, path = "../builtin" }
lazy_static = "1.4.0"